<resources>
    <string name="app_name">NoteApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Darling.In.The.FrankXX.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_home">Заметки</string>
    <string name="menu_gallery">Настройки</string>
    <string name="menu_slideshow">О разработчиках</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="darling">Darling in the FranXX</string>
    <string name="exit">Выход</string>
    <string name="support">SUPPORT</string>
    <string name="enter_title">Enter title</string>
    <string name="done">Готово</string>
    <string name="search_title">Поиск заметок</string>
    <string name="hello_world">Hello World</string>
    <string name="first_onboard_text">Вообще отстой</string>
    <string name="second_onboard_text">Советую, не скачивайте</string>
    <string name="three_onboard_text">Мало функций и много багов и лагов</string>
    <string name="start_onboarding">Начать Работу</string>
    <string name="propustit">Пропустить</string>
</resources>