<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_send_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_gallery" />
        <item
            android:title=""
            android:id="@+id/Nopuf"

            />


        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_error_24"

            android:title="@string/menu_slideshow" />



        <item
            android:id="@+id/nov_exit_drawer"
            android:title="@string/exit"
            android:icon="@drawable/ic_settings_new_24"

            />

    </group>
</menu>