<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.noteapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.noteapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.noteapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.noteapp.ui.form.NoteFragment"
        android:label=""
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/onBoadFragment"
        android:name="com.example.noteapp.onboard.OnBoadFragment"
        android:label="fragment_on_boad"
        tools:layout="@layout/fragment_on_boad" >
        <action
            android:id="@+id/action_onBoadFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>